// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test generator cases test getMWACases 1`] = `
Array [
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "pnpm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "yarn",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "yarn",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "pnpm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "yarn",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "npm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "pnpm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "pnpm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "npm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "yarn",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "npm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "npm",
    "runWay": "electron",
    "solution": "mwa",
  },
]
`;

exports[`test generator cases test getModuleCases 1`] = `
Array [
  Object {
    "language": "js",
    "packageManager": "yarn",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageManager": "npm",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "yarn",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageManager": "pnpm",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "npm",
    "solution": "module",
  },
]
`;

exports[`test generator cases test getModuleNewCases 1`] = `
Array [
  Object {
    "actionType": "function",
    "function": "tailwindcss",
  },
  Object {
    "actionType": "function",
    "function": "less",
  },
  Object {
    "actionType": "function",
    "function": "sass",
  },
  Object {
    "actionType": "function",
    "function": "storybook",
  },
  Object {
    "actionType": "function",
    "function": "runtimeApi",
  },
]
`;

exports[`test generator cases test getMonorepoCases 1`] = `
Array [
  Object {
    "packageManager": "pnpm",
    "solution": "monorepo",
  },
  Object {
    "packageManager": "yarn",
    "solution": "monorepo",
  },
]
`;

exports[`test generator cases test getMonorepoNewCases 1`] = `
Array [
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageName": "ts-no-no-selfControlRoute",
    "packagePath": "ts-no-no-selfControlRoute",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-no-conventionalRoute",
    "packagePath": "js-yes-no-conventionalRoute",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-electron-selfControlRoute",
    "packagePath": "js-yes-electron-selfControlRoute",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-electron-conventionalRoute",
    "packagePath": "js-yes-electron-conventionalRoute",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-no-selfControlRoute",
    "packagePath": "js-yes-no-selfControlRoute",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageName": "ts-no-electron-selfControlRoute",
    "packagePath": "ts-no-electron-selfControlRoute",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-electron-conventionalRoute",
    "packagePath": "ts-yes-electron-conventionalRoute",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-no-conventionalRoute",
    "packagePath": "ts-yes-no-conventionalRoute",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageName": "js-no-no-selfControlRoute",
    "packagePath": "js-no-no-selfControlRoute",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageName": "js-no-electron-selfControlRoute",
    "packagePath": "js-no-electron-selfControlRoute",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-no-selfControlRoute",
    "packagePath": "ts-yes-no-selfControlRoute",
    "runWay": "no",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-electron-selfControlRoute",
    "packagePath": "ts-yes-electron-selfControlRoute",
    "runWay": "electron",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageName": "ts-no-no-selfControlRoute",
    "packagePath": "ts-no-no-selfControlRoute",
    "runWay": "no",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-no-conventionalRoute",
    "packagePath": "js-yes-no-conventionalRoute",
    "runWay": "no",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-electron-selfControlRoute",
    "packagePath": "js-yes-electron-selfControlRoute",
    "runWay": "electron",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-electron-conventionalRoute",
    "packagePath": "js-yes-electron-conventionalRoute",
    "runWay": "electron",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-no-selfControlRoute",
    "packagePath": "js-yes-no-selfControlRoute",
    "runWay": "no",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageName": "ts-no-electron-selfControlRoute",
    "packagePath": "ts-no-electron-selfControlRoute",
    "runWay": "electron",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-electron-conventionalRoute",
    "packagePath": "ts-yes-electron-conventionalRoute",
    "runWay": "electron",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-no-conventionalRoute",
    "packagePath": "ts-yes-no-conventionalRoute",
    "runWay": "no",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageName": "js-no-no-selfControlRoute",
    "packagePath": "js-no-no-selfControlRoute",
    "runWay": "no",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageName": "js-no-electron-selfControlRoute",
    "packagePath": "js-no-electron-selfControlRoute",
    "runWay": "electron",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-no-selfControlRoute",
    "packagePath": "ts-yes-no-selfControlRoute",
    "runWay": "no",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-electron-selfControlRoute",
    "packagePath": "ts-yes-electron-selfControlRoute",
    "runWay": "electron",
    "solution": "mwa_test",
  },
  Object {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "inner_module",
  },
  Object {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "inner_module",
  },
]
`;
